--- a/examples/tailscale-sidecar/docker-compose.yml
+++ b/examples/tailscale-sidecar/docker-compose.yml
@@ -35,6 +35,11 @@ services:
     image: ghcr.io/nicotsx/zerobyte:latest
     container_name: zerobyte
     restart: unless-stopped
+    # Uncomment if you need to mount NFS/SMB/WebDAV volumes:
+    # cap_add:
+    #   - SYS_ADMIN
+    # devices:
+    #   - /dev/fuse:/dev/fuse
     # Share the Tailscale network namespace (sidecar pattern)
     network_mode: service:tailscale
     depends_on:
