--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,11 +35,12 @@ jobs:
     uses: ./.github/workflows/checks.yml
 
   e2e-tests:
+    if: false
     uses: ./.github/workflows/e2e.yml
 
   build-images:
     timeout-minutes: 15
-    needs: [determine-release-type, checks, e2e-tests]
+    needs: [determine-release-type, checks]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
