--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@scalar/hono-api-reference": "^0.9.41",
+		"@tanstack/react-hotkeys": "^0.1.0",
 		"@tanstack/react-query": "^5.90.21",
 		"@tanstack/react-query-devtools": "^5.91.3",
 		"@tanstack/react-router": "^1.160.2",
