feat: restore snapshot as tar (#550)
* feat: export snapshot as tar file

chore(mutext): prevent double lock release

* chore: pr feedbacks

* fix: dump single file no tar

* chore: pr feedbacks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,9 @@ services:
       - LOG_LEVEL=debug
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /var/lib/zerobyte:/var/lib/zerobyte
       - ~/.config/rclone:/root/.config/rclone:ro
+      - ./tmp:/test-data
+      - ./data:/var/lib/zerobyte
 
   zerobyte-e2e:
     build:
