--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"clsx": "^2.1.1",
 		"commander": "^14.0.2",
 		"consola": "^3.4.2",
+		"content-disposition": "^1.0.1",
 		"cron-parser": "^5.5.0",
 		"date-fns": "^4.1.0",
 		"dither-plugin": "^1.1.1",
@@ -102,6 +103,7 @@
 		"@testing-library/react": "^16.3.2",
 		"@total-typescript/shoehorn": "^0.1.2",
 		"@types/bun": "^1.3.6",
+		"@types/content-disposition": "^0.5.9",
 		"@types/node": "^25.2.3",
 		"@types/react": "^19.2.14",
 		"@types/react-dom": "^19.2.3",
